@@ -142,12 +142,14 @@ export (
 	"QUnif",
 
         read.org.table,
+    relErrV, relErr,
 	"rot2", "rotn",
 	"roundfixS",
 	"rrange",
 	"sHalton",
 	"seqXtend",
     sessionInfoX,
+    shortRversion,
 	"signi",
         "sourceAttach",
 	"strcodes",
